Fix paddings on small screen resolutions

--- a/#src/styles/blocks/advantages.css
+++ b/#src/styles/blocks/advantages.css
@@ -8,7 +8,7 @@
 
 @media (max-width: 768px) {
 	.advantages {
-		padding: 60px 15px;
+		padding: 30px 15px;
 	}
 }
 
