--- a/#src/styles/blocks/download.css
+++ b/#src/styles/blocks/download.css
@@ -7,7 +7,7 @@
 
 @media (max-width: 768px) {
     .downloads {
-        padding: 15px;
+        padding: 30px 15px;
     }
 }
 
