--- a/#src/styles/blocks/more.css
+++ b/#src/styles/blocks/more.css
@@ -7,7 +7,7 @@
 
 @media (max-width: 768px) {
 	.more {
-		padding: 60px 15px;
+		padding: 30px 15px;
 	}
 }
 
